{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 27,
  "lineage": "8037a3b5-e5f9-e11e-9728-74fdad6c17c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492019622:internet-gateway/igw-06a8b46c20e5fcc03",
            "id": "igw-06a8b46c20e5fcc03",
            "owner_id": "381492019622",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0538a8f09944b709e"
          },
          "dependencies": [
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492019622:loadbalancer/app/terra-lb/97b1b29a76c399ff",
            "arn_suffix": "app/terra-lb/97b1b29a76c399ff",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-lb-371709602.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492019622:loadbalancer/app/terra-lb/97b1b29a76c399ff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terra-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-006ca55dd0ae00cef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04471abc4741fde1f"
              },
              {
                "subnet_id": "subnet-05b94beeb0ac95344"
              }
            ],
            "subnets": [
              "subnet-04471abc4741fde1f",
              "subnet-05b94beeb0ac95344"
            ],
            "tags": {
              "Name": "terraform-lb"
            },
            "tags_all": {
              "Name": "terraform-lb"
            },
            "vpc_id": "vpc-0538a8f09944b709e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.aws_lb_sg",
            "aws_subnet.sub-1",
            "aws_subnet.sub-2",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492019622:listener/app/terra-lb/97b1b29a76c399ff/85e8c136a1140734",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492019622:targetgroup/ecs-target/1706e088637c67c2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492019622:listener/app/terra-lb/97b1b29a76c399ff/85e8c136a1140734",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381492019622:loadbalancer/app/terra-lb/97b1b29a76c399ff",
            "mutual_authentication": [],
            "port": 5001,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform_lb",
            "aws_lb_target_group.terraform_lb_target_group",
            "aws_security_group.aws_lb_sg",
            "aws_subnet.sub-1",
            "aws_subnet.sub-2",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492019622:targetgroup/ecs-target/1706e088637c67c2",
            "arn_suffix": "targetgroup/ecs-target/1706e088637c67c2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492019622:targetgroup/ecs-target/1706e088637c67c2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target",
            "port": 5001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0538a8f09944b709e"
          },
          "dependencies": [
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492019622:route-table/rtb-0667e8ec44a33a9b9",
            "id": "rtb-0667e8ec44a33a9b9",
            "owner_id": "381492019622",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a8b46c20e5fcc03",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0538a8f09944b709e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015889d4e46669692",
            "route_table_id": "rtb-0667e8ec44a33a9b9",
            "subnet_id": "subnet-05b94beeb0ac95344"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform_RT",
            "aws_subnet.sub-1",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053313178635090ee",
            "route_table_id": "rtb-0667e8ec44a33a9b9",
            "subnet_id": "subnet-04471abc4741fde1f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform_RT",
            "aws_subnet.sub-2",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492019622:security-group/sg-004d5e9a96ff3112e",
            "description": "Rules for ecs service",
            "egress": [],
            "id": "sg-004d5e9a96ff3112e",
            "ingress": [],
            "name": "aws-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "381492019622",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0538a8f09944b709e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492019622:security-group/sg-006ca55dd0ae00cef",
            "description": "Rules for ecs service",
            "egress": [],
            "id": "sg-006ca55dd0ae00cef",
            "ingress": [],
            "name": "aws-lb-service-sg",
            "name_prefix": "",
            "owner_id": "381492019622",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0538a8f09944b709e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ecs_service_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5001,
            "id": "sgrule-1292143955",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-004d5e9a96ff3112e",
            "security_group_rule_id": "sgr-06f185afb75bc60fd",
            "self": false,
            "source_security_group_id": "sg-006ca55dd0ae00cef",
            "timeouts": null,
            "to_port": 5001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_ecs_service_sg",
            "aws_security_group.aws_lb_sg",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ecs_service_https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-589519880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-004d5e9a96ff3112e",
            "security_group_rule_id": "sgr-08cf950509818655a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_ecs_service_sg",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_lb_service_5001_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5001,
            "id": "sgrule-245084249",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006ca55dd0ae00cef",
            "security_group_rule_id": "sgr-081a088bec978d823",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5001,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_lb_sg",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_lb_service_5001_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5001,
            "id": "sgrule-2428195252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006ca55dd0ae00cef",
            "security_group_rule_id": "sgr-0e207fd28011c4d17",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_lb_sg",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_lb_service_http_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2321296939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006ca55dd0ae00cef",
            "security_group_rule_id": "sgr-04d984793c75cd929",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_lb_sg",
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492019622:subnet/subnet-05b94beeb0ac95344",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b94beeb0ac95344",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492019622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-1"
            },
            "tags_all": {
              "Name": "sub-1"
            },
            "vpc_id": "vpc-0538a8f09944b709e"
          },
          "dependencies": [
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492019622:subnet/subnet-04471abc4741fde1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04471abc4741fde1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492019622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-2"
            },
            "tags_all": {
              "Name": "sub-2"
            },
            "vpc_id": "vpc-0538a8f09944b709e"
          },
          "dependencies": [
            "aws_vpc.Terrform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terrform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492019622:vpc/vpc-0538a8f09944b709e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-04870119b6c62ba1c",
            "default_route_table_id": "rtb-0dbe35d0a7fac9f96",
            "default_security_group_id": "sg-0d0af3780dc21ecbd",
            "dhcp_options_id": "dopt-0990031fc12e78a44",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0538a8f09944b709e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbe35d0a7fac9f96",
            "owner_id": "381492019622"
          }
        }
      ]
    }
  ]
}